# sbir-search

./: .gitignore  README.md  config.toml  pyproject.toml
.github/workflows/: sbir-crawl.yml
src/sbir_search/: cli.py  config.py  dod.py  matcher.py  models.py  nih.py  notify.py  nsf.py  rss.py  sam.py  sbir.py  sources.py  state.py
